# llm-zoomcamp-2026-aniel-notes

./: .gitignore  Dockerfile  Makefile  README.md  main.py  notes.md  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
01-agentic-rag/: rag_helper.py
01-agentic-rag/notebooks/: homework.ipynb
common/: base.py
