[project]
name = "llm-zoomcamp-2026-aniel-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gitsource>=0.0.5",
    "jupyterlab>=4.6.0",
    "minsearch>=0.1.1",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
